Projet final: Ajout du script complet + Correction alignement css

--- a/projet_final/index.css
+++ b/projet_final/index.css
@@ -67,7 +67,7 @@ input#search {
 	text-align: left;
 
 	padding-top: 0.01em;
-	padding-bottom: 0.01em;
+	padding-bottom: 1.33em;
 	padding-left: 1em;
 	border-radius: 10px;
 	border: solid 1px lightgray;
